--- a/css/media.css
+++ b/css/media.css
@@ -210,6 +210,7 @@
     flex-direction: row;
     transform: translateY(-50px);
     gap: 12px;
+    margin-left: 8px;
   }
   .avatar {
     width: 50px;
@@ -491,7 +492,7 @@
     margin: 0 auto;
   }
 
-  .card:last-child {
+  .card {
     margin-bottom: 25px;
   }
   .card p {
